# ai-agent-rig-tauri

./: .gitignore  README.md
ai-agent-tauri/: package.json  pnpm-lock.yaml
ai-agent-tauri/src/: App.css  App.tsx  index.css
ai-agent-tauri/src-tauri/: Cargo.toml  tauri.conf.json
ai-agent-tauri/src-tauri/src/: lib.rs  main.rs  tool.rs
