[package]
name = "ai-agent-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_agent_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

rig-core = { version = "0.21.0", features = ["rmcp"] }

futures-util = "0.3"
rmcp = { version = "0.5", features = ["client", "transport-streamable-http-client", "transport-sse-client", "reqwest"] }
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15"
tokio = {version = "1.47.1", features= ["full"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
log = "0.4.28"
mcp-core = "0.1.50"
